完成搜尋、Table與分頁功能

--- a/docs/React/第10章：伺服器與客戶端元件.md
+++ b/docs/React/第10章：伺服器與客戶端元件.md
@@ -1,10 +1,12 @@
 # 第 10 章：伺服器與客戶端元件
 
 要了解伺服器和客戶端元件如何運作，熟悉兩個基礎的 Web 概念會很有幫助：
+
 - 您的應用程式程式碼可以執行的**環境**：**伺服器**和**客戶端**。
 - 分隔伺服器和客戶端程式碼的**網路邊界**。
 
 ## 伺服器與客戶端環境
+
 在 Web 應用程式的上下文中：
 
 ![](https://nextjs.org/_next/image?url=https%3A%2F%2Fh8DxKfmAPhn8O0p3.public.blob.vercel-storage.com%2Flearn%2Fdark%2Flearn-client-and-server-environments.png&w=3840&q=75)
@@ -16,6 +18,7 @@
 因此，您為伺服器和客戶端編寫的程式碼不總是一樣的。某些操作（例如資料獲取或管理使用者狀態）更適合在某個環境中執行。
 
 ## 網路邊界
+
 **網路邊界 (Network Boundary)** 是一條分隔不同環境的概念性線條。
 在 React 中，您可以選擇在元件樹中放置網路邊界的位置。例如，您可以在伺服器上獲取資料並渲染使用者的貼文（使用**伺服器元件**），然後在客戶端上為每個貼文渲染互動式的 `LikeButton`（使用**客戶端元件**）。
 同樣地，您可以建立一個在伺服器上渲染並在各個頁面間共享的 `Nav` 元件，但如果您想為連結顯示活動狀態，您可以在客戶端上渲染 `Links` 列表。
@@ -24,29 +27,33 @@
 
 在幕後，元件被分成兩個模組圖。**伺服器模組圖**（或樹）包含所有在伺服器上渲染的伺服器元件，而**客戶端模組圖**（或樹）包含所有客戶端元件。
 在伺服器元件渲染完畢後，一種稱為 **React 伺服器元件酬載 (RSC)** 的特殊資料格式會被傳送到客戶端。RSC 酬載包含：
+
 - 伺服器元件的渲染結果。
 - 客戶端元件應該被渲染的位置的佔位符（或空洞）以及對其 JavaScript 檔案的引用。
-React 使用這些資訊來整合伺服器和客戶端元件，並在客戶端上更新 DOM。
-讓我們看看這是如何運作的。
+  React 使用這些資訊來整合伺服器和客戶端元件，並在客戶端上更新 DOM。
+  讓我們看看這是如何運作的。
 
 ## 使用客戶端元件
+
 正如您在上一章所學，Next.js 預設使用**伺服器元件**——這是為了提高應用程式的效能，也意味著您不需要採取額外的步驟來採用它們。
 回頭看您瀏覽器中的錯誤，Next.js 警告您正試圖在伺服器元件中使用 `useState`。您可以透過將互動式的「喜歡」按鈕移至**客戶端元件**來解決此問題。
 在 `app` 資料夾內建立一個名為 `like-button.js` 的新檔案，並匯出一個 `LikeButton` 元件：
 
 **/app/like-button.js**
+
 ```javascript
 export default function LikeButton() {}
 ```
 
 將 `<button>` 元素和 `handleClick()` 函式從 `page.js` 移到您的新 `LikeButton` 元件：
 **/app/like-button.js**
+
 ```javascript
 export default function LikeButton() {
   function handleClick() {
     setLikes(likes + 1);
   }
- 
+
   return <button onClick={handleClick}>Like ({likes})</button>;
 }
 ```
@@ -54,16 +61,17 @@ export default function LikeButton() {
 接下來，移動 `likes` 狀態和匯入：
 
 **/app/like-button.js**
+
 ```javascript
-import { useState } from 'react';
- 
+import { useState } from "react";
+
 export default function LikeButton() {
   const [likes, setLikes] = useState(0);
- 
+
   function handleClick() {
     setLikes(likes + 1);
   }
- 
+
   return <button onClick={handleClick}>Like ({likes})</button>;
 }
 ```
@@ -71,18 +79,19 @@ export default function LikeButton() {
 現在，要讓 `LikeButton` 成為一個客戶端元件，請在檔案頂部加上 React 的 `'use client'` 指令。這告訴 React 在客戶端上渲染該元件。
 
 **/app/like-button.js**
+
 ```javascript
-'use client';
- 
-import { useState } from 'react';
- 
+"use client";
+
+import { useState } from "react";
+
 export default function LikeButton() {
   const [likes, setLikes] = useState(0);
- 
+
   function handleClick() {
     setLikes(likes + 1);
   }
- 
+
   return <button onClick={handleClick}>Like ({likes})</button>;
 }
 ```
@@ -90,16 +99,17 @@ export default function LikeButton() {
 回到您的 `page.js` 檔案，將 `LikeButton` 元件匯入您的頁面：
 
 **/app/page.js**
+
 ```javascript
-import LikeButton from './like-button';
- 
+import LikeButton from "./like-button";
+
 function Header({ title }) {
-  return <h1>{title ? title : 'Default title'}</h1>;
+  return <h1>{title ? title : "Default title"}</h1>;
 }
- 
+
 export default function HomePage() {
-  const names = ['Ada Lovelace', 'Grace Hopper', 'Margaret Hamilton'];
- 
+  const names = ["Ada Lovelace", "Grace Hopper", "Margaret Hamilton"];
+
   return (
     <div>
       <Header title="Develop. Preview. Ship." />
@@ -118,11 +128,13 @@ export default function HomePage() {
 這個功能稱為**快速刷新 (Fast Refresh)**。它為您所做的任何編輯提供即時回饋，並且已與 Next.js 預先配置。
 
 ## 總結
+
 總結一下，您學到了伺服器和客戶端環境，以及何時使用它們。您還學到 Next.js 預設使用 React 伺服器元件來提高效能，以及如何選擇性地使用客戶端元件來讓 UI 的一小部分具有互動性。
 
 ## 額外閱讀
 
 關於伺服器和客戶端元件還有很多可以學習的。這裡有一些額外資源：
+
 - [伺服器元件文件](https://nextjs.org/docs/app/building-your-application/rendering/server-components)
 - [客戶端元件文件](https://nextjs.org/docs/app/building-your-application/rendering/client-components)
 - [組合模式](https://nextjs.org/docs/app/building-your-application/rendering/composition-patterns)
