--- a/docs/第12章：處理錯誤.md
+++ b/docs/第12章：處理錯誤.md
@@ -6,8 +6,8 @@
 
 以下是我們將涵蓋的主題：
 
--   如何使用特殊的 `error.tsx` 檔案來捕獲路由區段中的錯誤，並向使用者顯示一個備用 UI。
--   如何使用 `notFound` 函數和 `not-found` 檔案來處理 404 錯誤（針對不存在的資源）。
+- 如何使用特殊的 `error.tsx` 檔案來捕獲路由區段中的錯誤，並向使用者顯示一個備用 UI。
+- 如何使用 `notFound` 函數和 `not-found` 檔案來處理 404 錯誤（針對不存在的資源）。
 
 ## 為 Server Actions 添加 `try/catch`
 
@@ -16,17 +16,18 @@
 如果您知道如何做，可以花幾分鐘時間更新您的 Server Actions，或者您可以複製下面的程式碼：
 
 `/app/lib/actions.ts` (`createInvoice`)
+
 ```ts
 export async function createInvoice(formData: FormData) {
   const { customerId, amount, status } = CreateInvoice.parse({
-    customerId: formData.get('customerId'),
-    amount: formData.get('amount'),
-    status: formData.get('status'),
+    customerId: formData.get("customerId"),
+    amount: formData.get("amount"),
+    status: formData.get("status"),
   });
- 
+
   const amountInCents = amount * 100;
-  const date = new Date().toISOString().split('T')[0];
- 
+  const date = new Date().toISOString().split("T")[0];
+
   try {
     await sql`
       INSERT INTO invoices (customer_id, amount, status, date)
@@ -36,26 +37,27 @@ export async function createInvoice(formData: FormData) {
     // 暫時我們也將錯誤記錄到控制台
     console.error(error);
     return {
-      message: 'Database Error: Failed to Create Invoice.',
+      message: "Database Error: Failed to Create Invoice.",
     };
   }
- 
-  revalidatePath('/dashboard/invoices');
-  redirect('/dashboard/invoices');
+
+  revalidatePath("/dashboard/invoices");
+  redirect("/dashboard/invoices");
 }
 ```
 
 `/app/lib/actions.ts` (`updateInvoice`)
+
 ```ts
 export async function updateInvoice(id: string, formData: FormData) {
   const { customerId, amount, status } = UpdateInvoice.parse({
-    customerId: formData.get('customerId'),
-    amount: formData.get('amount'),
-    status: formData.get('status'),
+    customerId: formData.get("customerId"),
+    amount: formData.get("amount"),
+    status: formData.get("status"),
   });
- 
+
   const amountInCents = amount * 100;
- 
+
   try {
     await sql`
         UPDATE invoices
@@ -65,11 +67,11 @@ export async function updateInvoice(id: string, formData: FormData) {
   } catch (error) {
     // 暫時我們也將錯誤記錄到控制台
     console.error(error);
-    return { message: 'Database Error: Failed to Update Invoice.' };
+    return { message: "Database Error: Failed to Update Invoice." };
   }
- 
-  revalidatePath('/dashboard/invoices');
-  redirect('/dashboard/invoices');
+
+  revalidatePath("/dashboard/invoices");
+  redirect("/dashboard/invoices");
 }
 ```
 
@@ -80,13 +82,14 @@ export async function updateInvoice(id: string, formData: FormData) {
 如果您的 action 中出現了**未捕獲的異常**，會發生什麼事？我們可以透過手動拋出一個錯誤來模擬這種情況。例如，在 `deleteInvoice` action 中，在函數頂部拋出一個錯誤：
 
 `/app/lib/actions.ts`
+
 ```ts
 export async function deleteInvoice(id: string) {
-  throw new Error('Failed to Delete Invoice');
- 
+  throw new Error("Failed to Delete Invoice");
+
   // 無法到達的程式碼區塊
   await sql`DELETE FROM invoices WHERE id = ${id}`;
-  revalidatePath('/dashboard/invoices');
+  revalidatePath("/dashboard/invoices");
 }
 ```
 
@@ -101,11 +104,12 @@ export async function deleteInvoice(id: string) {
 在您的 `/dashboard/invoices` 資料夾內，建立一個名為 `error.tsx` 的新檔案並貼上以下程式碼：
 
 `/app/dashboard/invoices/error.tsx`
+
 ```tsx
-'use client';
- 
-import { useEffect } from 'react';
- 
+"use client";
+
+import { useEffect } from "react";
+
 export default function Error({
   error,
   reset,
@@ -117,7 +121,7 @@ export default function Error({
     // 可選地將錯誤記錄到錯誤報告服務
     console.error(error);
   }, [error]);
- 
+
   return (
     <main className="flex h-full flex-col items-center justify-center">
       <h2 className="text-center">Something went wrong!</h2>
@@ -137,10 +141,10 @@ export default function Error({
 
 關於上面的程式碼，您會注意到幾件事：
 
--   `"use client"` - `error.tsx` 需要是一個客戶端元件 (Client Component)。
--   它接受兩個 props：
-    -   `error`: 這個物件是 JavaScript 原生 `Error` 物件的一個實例。
-    -   `reset`: 這是一個用來重設錯誤邊界的函數。執行時，該函數將嘗試重新渲染路由區段。
+- `"use client"` - `error.tsx` 需要是一個客戶端元件 (Client Component)。
+- 它接受兩個 props：
+  - `error`: 這個物件是 JavaScript 原生 `Error` 物件的一個實例。
+  - `reset`: 這是一個用來重設錯誤邊界的函數。執行時，該函數將嘗試重新渲染路由區段。
 
 當您再次嘗試刪除一筆發票時，您應該會看到以下 UI。
 
@@ -157,16 +161,17 @@ export default function Error({
 您可以進入 `data.ts` 中的 `fetchInvoiceById` 函數，並為返回的發票添加一個 `console.log` 來確認資源不存在：
 
 `/app/lib/data.ts`
+
 ```ts
 export async function fetchInvoiceById(id: string) {
   try {
     // ...
- 
+
     console.log(invoice); // invoice 是一個空陣列 []
     return invoice[0];
   } catch (error) {
-    console.error('Database Error:', error);
-    throw new Error('Failed to fetch invoice.');
+    console.error("Database Error:", error);
+    throw new Error("Failed to fetch invoice.");
   }
 }
 ```
@@ -176,21 +181,22 @@ export async function fetchInvoiceById(id: string) {
 然後，您可以使用一個條件式來在發票不存在時調用 `notFound`：
 
 `/app/dashboard/invoices/[id]/edit/page.tsx`
+
 ```tsx
-import { fetchInvoiceById, fetchCustomers } from '@/app/lib/data';
-import { notFound } from 'next/navigation';
- 
+import { fetchInvoiceById, fetchCustomers } from "@/app/lib/data";
+import { notFound } from "next/navigation";
+
 export default async function Page({ params }: { params: { id: string } }) {
   const id = params.id;
   const [invoice, customers] = await Promise.all([
     fetchInvoiceById(id),
     fetchCustomers(),
   ]);
- 
+
   if (!invoice) {
     notFound();
   }
- 
+
   // ...
 }
 ```
@@ -202,10 +208,11 @@ export default async function Page({ params }: { params: { id: string } }) {
 在 `not-found.tsx` 檔案內，貼上以下程式碼：
 
 `/app/dashboard/invoices/[id]/edit/not-found.tsx`
+
 ```tsx
-import Link from 'next/link';
-import { FaceFrownIcon } from '@heroicons/react/24/outline';
- 
+import Link from "next/link";
+import { FaceFrownIcon } from "@heroicons/react/24/outline";
+
 export default function NotFound() {
   return (
     <main className="flex h-full flex-col items-center justify-center gap-2">
@@ -222,6 +229,7 @@ export default function NotFound() {
   );
 }
 ```
+
 重新整理該路由，您現在應該會看到以下 UI。
 
 值得記住的是，`notFound` 將優先於 `error.tsx`，所以當您想要處理更具體的錯誤時，可以使用它！
@@ -230,8 +238,11 @@ export default function NotFound() {
 
 要了解更多關於 Next.js 中錯誤處理的資訊，請查看以下文件：
 
--   [錯誤處理 (Error Handling)](https://nextjs.org/docs/app/building-your-application/routing/error-handling)
--   [`error.js` API 參考](https://nextjs.org/docs/app/api-reference/file-conventions/error)
--   [`notFound()` API 參考](https://nextjs.org/docs/app/api-reference/functions/not-found)
--   [`not-found.js` API 參考](https://nextjs.org/docs/app/api-reference/file-conventions/not-found)
+- [錯誤處理 (Error Handling)](https://nextjs.org/docs/app/building-your-application/routing/error-handling)
+- [`error.js` API 參考](https://nextjs.org/docs/app/api-reference/file-conventions/error)
+- [`notFound()` API 參考](https://nextjs.org/docs/app/api-reference/functions/not-found)
+- [`not-found.js` API 參考](https://nextjs.org/docs/app/api-reference/file-conventions/not-found)
+
+```
+
 ```
