--- a/docs/第14章：添加身份驗證.md
+++ b/docs/第14章：添加身份驗證.md
@@ -6,10 +6,10 @@
 
 以下是我們將涵蓋的主題：
 
--   什麼是身份驗證 (authentication)。
--   如何使用 NextAuth.js 為您的應用程式添加身份驗證。
--   如何使用中介軟體 (Middleware) 來重新導向使用者並保護您的路由。
--   如何使用 React 的 `useActionState` 來處理待處理狀態和表單錯誤。
+- 什麼是身份驗證 (authentication)。
+- 如何使用 NextAuth.js 為您的應用程式添加身份驗證。
+- 如何使用中介軟體 (Middleware) 來重新導向使用者並保護您的路由。
+- 如何使用 React 的 `useActionState` 來處理待處理狀態和表單錯誤。
 
 ## 什麼是身份驗證 (Authentication)？
 
@@ -21,8 +21,8 @@
 
 在 Web 開發中，身份驗證和授權扮演著不同的角色：
 
--   **身份驗證**是確保使用者是他們所聲稱的身份。您用您擁有的東西（如使用者名稱和密碼）來證明您的身份。
--   **授權**是下一步。一旦使用者的身份被確認，授權決定了他們被允許使用應用程式的哪些部分。
+- **身份驗證**是確保使用者是他們所聲稱的身份。您用您擁有的東西（如使用者名稱和密碼）來證明您的身份。
+- **授權**是下一步。一旦使用者的身份被確認，授權決定了他們被允許使用應用程式的哪些部分。
 
 所以，身份驗證檢查**您是誰**，而授權決定了您在應用程式中**可以做什麼**或**存取什麼**。
 
@@ -31,11 +31,12 @@
 首先，在您的應用程式中建立一個名為 `/login` 的新路由，並貼上以下程式碼：
 
 `/app/login/page.tsx`
+
 ```tsx
-import AcmeLogo from '@/app/ui/acme-logo';
-import LoginForm from '@/app/ui/login-form';
-import { Suspense } from 'react';
- 
+import AcmeLogo from "@/app/ui/acme-logo";
+import LoginForm from "@/app/ui/login-form";
+import { Suspense } from "react";
+
 export default function LoginPage() {
   return (
     <main className="flex items-center justify-center md:h-screen">
@@ -67,6 +68,7 @@ export default function LoginPage() {
 ```bash
 pnpm i next-auth@beta
 ```
+
 您正在安裝的是與 Next.js 14+ 相容的 `next-auth` 的測試版。
 
 接下來，為您的應用程式生成一個密鑰。這個密鑰用於加密 cookies，確保使用者會話的安全性。您可以在終端機中運行以下指令來完成：
@@ -80,6 +82,7 @@ openssl rand -base64 32
 然後，在您的 `.env` 檔案中，將您生成的密鑰添加到 `AUTH_SECRET` 變數中：
 
 `.env`
+
 ```
 AUTH_SECRET=your-secret-key
 ```
@@ -91,12 +94,13 @@ AUTH_SECRET=your-secret-key
 在您專案的根目錄中建立一個名為 `auth.config.ts` 的檔案，它將導出一個 `authConfig` 物件。這個物件將包含 NextAuth.js 的配置選項。目前，它只會包含 `pages` 選項：
 
 `/auth.config.ts`
+
 ```ts
-import type { NextAuthConfig } from 'next-auth';
- 
+import type { NextAuthConfig } from "next-auth";
+
 export const authConfig = {
   pages: {
-    signIn: '/login',
+    signIn: "/login",
   },
 } satisfies NextAuthConfig;
 ```
@@ -108,22 +112,23 @@ export const authConfig = {
 接下來，添加保護您路由的邏輯。這將阻止使用者存取儀表板頁面，除非他們已登入。
 
 `/auth.config.ts`
+
 ```ts
-import type { NextAuthConfig } from 'next-auth';
- 
+import type { NextAuthConfig } from "next-auth";
+
 export const authConfig = {
   pages: {
-    signIn: '/login',
+    signIn: "/login",
   },
   callbacks: {
     authorized({ auth, request: { nextUrl } }) {
       const isLoggedIn = !!auth?.user;
-      const isOnDashboard = nextUrl.pathname.startsWith('/dashboard');
+      const isOnDashboard = nextUrl.pathname.startsWith("/dashboard");
       if (isOnDashboard) {
         if (isLoggedIn) return true;
         return false; // 將未驗證的使用者重新導向到登入頁面
       } else if (isLoggedIn) {
-        return Response.redirect(new URL('/dashboard', nextUrl));
+        return Response.redirect(new URL("/dashboard", nextUrl));
       }
       return true;
     },
@@ -132,23 +137,25 @@ export const authConfig = {
 } satisfies NextAuthConfig;
 ```
 
--   `authorized` 回呼函數用於驗證請求是否有權限通過 Next.js 中介軟體存取頁面。它在請求完成之前被呼叫，並接收一個帶有 `auth` 和 `request` 屬性的物件。`auth` 屬性包含使用者的會話，而 `request` 屬性包含傳入的請求。
--   `providers` 選項是您列出不同登入選項的陣列。目前，它是一個空陣列以滿足 NextAuth 的配置。
+- `authorized` 回呼函數用於驗證請求是否有權限通過 Next.js 中介軟體存取頁面。它在請求完成之前被呼叫，並接收一個帶有 `auth` 和 `request` 屬性的物件。`auth` 屬性包含使用者的會話，而 `request` 屬性包含傳入的請求。
+- `providers` 選項是您列出不同登入選項的陣列。目前，它是一個空陣列以滿足 NextAuth 的配置。
 
 接下來，您需要將 `authConfig` 物件匯入到一個中介軟體檔案中。在您專案的根目錄中，建立一個名為 `middleware.ts` 的檔案並貼上以下程式碼：
 
 `/middleware.ts`
+
 ```ts
-import NextAuth from 'next-auth';
-import { authConfig } from './auth.config';
- 
+import NextAuth from "next-auth";
+import { authConfig } from "./auth.config";
+
 export default NextAuth(authConfig).auth;
- 
+
 export const config = {
   // https://nextjs.org/docs/app/api-reference/file-conventions/middleware#matcher
-  matcher: ['/((?!api|_next/static|_next/image|.*\.png$).*)'],
+  matcher: ["/((?!api|_next/static|_next/image|.*.png$).*)"],
 };
 ```
+
 在這裡，您使用 `authConfig` 物件初始化 NextAuth.js 並導出 `auth` 屬性。您還使用了來自中介軟體的 `matcher` 選項來指定它應該在特定的路徑上運行。
 
 使用中介軟體來完成此任務的優點是，受保護的路由甚至在**中介軟體驗證身份之前不會開始渲染**，從而增強了您應用程式的安全性和效能。
@@ -162,10 +169,11 @@ export const config = {
 建立一個名為 `auth.ts` 的新檔案，它將展開您的 `authConfig` 物件：
 
 `/auth.ts`
+
 ```ts
-import NextAuth from 'next-auth';
-import { authConfig } from './auth.config';
- 
+import NextAuth from "next-auth";
+import { authConfig } from "./auth.config";
+
 export const { auth, signIn, signOut } = NextAuth({
   ...authConfig,
 });
@@ -178,11 +186,12 @@ export const { auth, signIn, signOut } = NextAuth({
 Credentials 提供者允許使用者使用使用者名稱和密碼登入。
 
 `/auth.ts`
+
 ```ts
-import NextAuth from 'next-auth';
-import { authConfig } from './auth.config';
-import Credentials from 'next-auth/providers/credentials';
- 
+import NextAuth from "next-auth";
+import { authConfig } from "./auth.config";
+import Credentials from "next-auth/providers/credentials";
+
 export const { auth, signIn, signOut } = NextAuth({
   ...authConfig,
   providers: [Credentials({})],
@@ -196,12 +205,13 @@ export const { auth, signIn, signOut } = NextAuth({
 您可以使用 `authorize` 函數來處理身份驗證邏輯。與 Server Actions 類似，您可以使用 `zod` 來驗證電子郵件和密碼，然後再檢查使用者是否存在於資料庫中：
 
 `/auth.ts`
+
 ```ts
-import NextAuth from 'next-auth';
-import { authConfig } from './auth.config';
-import Credentials from 'next-auth/providers/credentials';
-import { z } from 'zod';
- 
+import NextAuth from "next-auth";
+import { authConfig } from "./auth.config";
+import Credentials from "next-auth/providers/credentials";
+import { z } from "zod";
+
 export const { auth, signIn, signOut } = NextAuth({
   ...authConfig,
   providers: [
@@ -219,27 +229,28 @@ export const { auth, signIn, signOut } = NextAuth({
 驗證憑證後，建立一個新的 `getUser` 函數，從資料庫中查詢使用者。
 
 `/auth.ts`
+
 ```ts
-import NextAuth from 'next-auth';
-import Credentials from 'next-auth/providers/credentials';
-import { authConfig } from './auth.config';
-import { z } from 'zod';
-import type { User } from '@/app/lib/definitions';
-import bcrypt from 'bcrypt';
-import postgres from 'postgres';
- 
-const sql = postgres(process.env.POSTGRES_URL!, { ssl: 'require' });
- 
+import NextAuth from "next-auth";
+import Credentials from "next-auth/providers/credentials";
+import { authConfig } from "./auth.config";
+import { z } from "zod";
+import type { User } from "@/app/lib/definitions";
+import bcrypt from "bcrypt";
+import postgres from "postgres";
+
+const sql = postgres(process.env.POSTGRES_URL!, { ssl: "require" });
+
 async function getUser(email: string): Promise<User | undefined> {
   try {
     const user = await sql<User[]>`SELECT * FROM users WHERE email=${email}`;
     return user[0];
   } catch (error) {
-    console.error('Failed to fetch user:', error);
-    throw new Error('Failed to fetch user.');
+    console.error("Failed to fetch user:", error);
+    throw new Error("Failed to fetch user.");
   }
 }
- 
+
 export const { auth, signIn, signOut } = NextAuth({
   ...authConfig,
   providers: [
@@ -248,13 +259,13 @@ export const { auth, signIn, signOut } = NextAuth({
         const parsedCredentials = z
           .object({ email: z.string().email(), password: z.string().min(6) })
           .safeParse(credentials);
- 
+
         if (parsedCredentials.success) {
           const { email, password } = parsedCredentials.data;
           const user = await getUser(email);
           if (!user) return null;
         }
- 
+
         return null;
       },
     }),
@@ -265,6 +276,7 @@ export const { auth, signIn, signOut } = NextAuth({
 然後，呼叫 `bcrypt.compare` 來檢查密碼是否匹配：
 
 `/auth.ts`
+
 ```ts
 // ...
 export const { auth, signIn, signOut } = NextAuth({
@@ -273,17 +285,17 @@ export const { auth, signIn, signOut } = NextAuth({
     Credentials({
       async authorize(credentials) {
         // ...
- 
+
         if (parsedCredentials.success) {
           const { email, password } = parsedCredentials.data;
           const user = await getUser(email);
           if (!user) return null;
           const passwordsMatch = await bcrypt.compare(password, user.password);
- 
+
           if (passwordsMatch) return user;
         }
- 
-        console.log('Invalid credentials');
+
+        console.log("Invalid credentials");
         return null;
       },
     }),
@@ -298,27 +310,28 @@ export const { auth, signIn, signOut } = NextAuth({
 現在您需要將身份驗證邏輯與您的登入表單連接起來。在您的 `actions.ts` 檔案中，創建一個名為 `authenticate` 的新 action。此 action 應從 `auth.ts` 匯入 `signIn` 函數：
 
 `/app/lib/actions.ts`
+
 ```ts
-'use server';
- 
-import { signIn } from '@/auth';
-import { AuthError } from 'next-auth';
- 
+"use server";
+
+import { signIn } from "@/auth";
+import { AuthError } from "next-auth";
+
 // ...
- 
+
 export async function authenticate(
   prevState: string | undefined,
-  formData: FormData,
+  formData: FormData
 ) {
   try {
-    await signIn('credentials', formData);
+    await signIn("credentials", formData);
   } catch (error) {
     if (error instanceof AuthError) {
       switch (error.type) {
-        case 'CredentialsSignin':
-          return 'Invalid credentials.';
+        case "CredentialsSignin":
+          return "Invalid credentials.";
         default:
-          return 'Something went wrong.';
+          return "Something went wrong.";
       }
     }
     throw error;
@@ -331,38 +344,37 @@ export async function authenticate(
 最後，在您的 `login-form.tsx` 元件中，您可以使用 React 的 `useActionState` 來呼叫 server action、處理表單錯誤並顯示表單的待處理狀態：
 
 `/app/ui/login-form.tsx`
+
 ```tsx
-'use client';
- 
-import { lusitana } from '@/app/ui/fonts';
+"use client";
+
+import { lusitana } from "@/app/ui/fonts";
 import {
   AtSymbolIcon,
   KeyIcon,
   ExclamationCircleIcon,
-} from '@heroicons/react/24/outline';
-import { ArrowRightIcon } from '@heroicons/react/20/solid';
-import { Button } from '@/app/ui/button';
-import { useActionState } from 'react';
-import { authenticate } from '@/app/lib/actions';
-import { useSearchParams } from 'next/navigation';
- 
+} from "@heroicons/react/24/outline";
+import { ArrowRightIcon } from "@heroicons/react/20/solid";
+import { Button } from "@/app/ui/button";
+import { useActionState } from "react";
+import { authenticate } from "@/app/lib/actions";
+import { useSearchParams } from "next/navigation";
+
 export default function LoginForm() {
   const searchParams = useSearchParams();
-  const callbackUrl = searchParams.get('callbackUrl') || '/dashboard';
+  const callbackUrl = searchParams.get("callbackUrl") || "/dashboard";
   const [errorMessage, formAction, isPending] = useActionState(
     authenticate,
-    undefined,
+    undefined
   );
- 
+
   return (
     <form action={formAction} className="space-y-3">
       <div className="flex-1 rounded-lg bg-gray-50 px-6 pb-4 pt-8">
         <h1 className={`${lusitana.className} mb-3 text-2xl`}>
           Please log in to continue.
         </h1>
-        <div className="w-full">
-          {/* ... email and password inputs */}
-        </div>
+        <div className="w-full">{/* ... email and password inputs */}</div>
         <input type="hidden" name="redirectTo" value={callbackUrl} />
         <Button className="mt-4 w-full" aria-disabled={isPending}>
           Log in <ArrowRightIcon className="ml-auto h-5 w-5 text-gray-50" />
@@ -390,13 +402,14 @@ export default function LoginForm() {
 要將登出功能添加到 `<SideNav />`，請在您的 `<form>` 元素中呼叫 `auth.ts` 中的 `signOut` 函數：
 
 `/app/ui/dashboard/sidenav.tsx`
+
 ```tsx
-import Link from 'next/link';
-import NavLinks from '@/app/ui/dashboard/nav-links';
-import AcmeLogo from '@/app/ui/acme-logo';
-import { PowerIcon } from '@heroicons/react/24/outline';
-import { signOut } from '@/auth';
- 
+import Link from "next/link";
+import NavLinks from "@/app/ui/dashboard/nav-links";
+import AcmeLogo from "@/app/ui/acme-logo";
+import { PowerIcon } from "@heroicons/react/24/outline";
+import { signOut } from "@/auth";
+
 export default function SideNav() {
   return (
     <div className="flex h-full flex-col px-3 py-4 md:px-2">
@@ -406,8 +419,8 @@ export default function SideNav() {
         <div className="hidden h-auto w-full grow rounded-md bg-gray-50 md:block"></div>
         <form
           action={async () => {
-            'use server';
-            await signOut({ redirectTo: '/' });
+            "use server";
+            await signOut({ redirectTo: "/" });
           }}
         >
           <button className="flex h-[48px] grow items-center justify-center gap-2 rounded-md bg-gray-50 p-3 text-sm font-medium hover:bg-sky-100 hover:text-blue-600 md:flex-none md:justify-start md:p-2 md:px-3">
@@ -425,5 +438,5 @@ export default function SideNav() {
 
 現在，試試看。您應該能夠使用以下憑證登入和登出您的應用程式：
 
--   **電子郵件**: `user@nextmail.com`
--   **密碼**: `123456`
+- **電子郵件**: `user@nextmail.com`
+- **密碼**: `123456`
