--- a/docs/第1章：開始入門.md
+++ b/docs/第1章：開始入門.md
@@ -36,11 +36,11 @@ cd nextjs-dashboard
 
 本專案的資料夾結構主要包含 `app`、`public` 以及一些設定檔。
 
--   **`/app`**: 包含您應用程式的所有路由、元件和邏輯。這將是您主要工作的地方。
-    -   **`/app/lib`**: 包含您應用程式中使用的函數，例如可重複使用的工具函數和資料獲取函數。
-    -   **`/app/ui`**: 包含您應用程式的所有 UI 元件，例如卡片、表格和表單。為節省您的時間，我們已為這些元件預先設定了樣式。
--   **`/public`**: 包含您應用程式的所有靜態資產，例如圖片。
--   **設定檔 (Config Files)**: 您也會在應用程式的根目錄中看到 `next.config.ts` 等設定檔。這些檔案大多數在您使用 `create-next-app` 建立新專案時自動產生並預先設定。在本課程中，您無需修改它們。
+- **`/app`**: 包含您應用程式的所有路由、元件和邏輯。這將是您主要工作的地方。
+  - **`/app/lib`**: 包含您應用程式中使用的函數，例如可重複使用的工具函數和資料獲取函數。
+  - **`/app/ui`**: 包含您應用程式的所有 UI 元件，例如卡片、表格和表單。為節省您的時間，我們已為這些元件預先設定了樣式。
+- **`/public`**: 包含您應用程式的所有靜態資產，例如圖片。
+- **設定檔 (Config Files)**: 您也會在應用程式的根目錄中看到 `next.config.ts` 等設定檔。這些檔案大多數在您使用 `create-next-app` 建立新專案時自動產生並預先設定。在本課程中，您無需修改它們。
 
 請隨意探索這些資料夾，即使您暫時不完全理解所有程式碼的功能也無需擔心。
 
@@ -48,25 +48,26 @@ cd nextjs-dashboard
 
 當您建構使用者介面時，有一些預留資料會很有幫助。如果資料庫或 API 尚未準備就緒，您可以：
 
--   使用 JSON 格式或 JavaScript 物件的預留資料。
--   使用第三方服務，例如 mockAPI。
+- 使用 JSON 格式或 JavaScript 物件的預留資料。
+- 使用第三方服務，例如 mockAPI。
 
 對於此專案，我們在 `app/lib/placeholder-data.ts` 中提供了一些預留資料。檔案中的每個 JavaScript 物件都代表資料庫中的一個表格。例如，以下是 `invoices` 表格的資料範例：
 
 `/app/lib/placeholder-data.ts`
+
 ```typescript
 const invoices = [
   {
     customer_id: customers[0].id,
     amount: 15795,
-    status: 'pending',
-    date: '2022-12-06',
+    status: "pending",
+    date: "2022-12-06",
   },
   {
     customer_id: customers[1].id,
     amount: 20348,
-    status: 'pending',
-    date: '2022-11-14',
+    status: "pending",
+    date: "2022-11-14",
   },
   // ...
 ];
@@ -83,6 +84,7 @@ const invoices = [
 現在，請查看 `/app/lib/definitions.ts` 檔案。在這裡，我們手動定義了將從資料庫返回的型別。例如，`invoices` 表格具有以下型別定義：
 
 `/app/lib/definitions.ts`
+
 ```typescript
 export type Invoice = {
   id: string;
@@ -91,7 +93,7 @@ export type Invoice = {
   date: string;
   // 在 TypeScript 中，這稱為字串聯合型別（string union type）。
   // 這表示 "status" 屬性只能是 'pending' 或 'paid' 這兩個字串之一。
-  status: 'pending' | 'paid';
+  status: "pending" | "paid";
 };
 ```
 
