--- a/docs/第5章：在頁面之間導航.md
+++ b/docs/第5章：在頁面之間導航.md
@@ -6,9 +6,9 @@
 
 以下是我們將涵蓋的主題：
 
--   如何使用 `next/link` 元件。
--   如何使用 `usePathname()` hook 顯示當前活動連結。
--   Next.js 中的導航是如何運作的。
+- 如何使用 `next/link` 元件。
+- 如何使用 `usePathname()` hook 顯示當前活動連結。
+- Next.js 中的導航是如何運作的。
 
 ## 為何要優化導航？
 
@@ -23,13 +23,14 @@
 要使用 `<Link />` 元件，請開啟 `/app/ui/dashboard/nav-links.tsx`，從 `next/link` 匯入 `Link` 元件。然後，將 `<a>` 標籤替換為 `<Link>`：
 
 `/app/ui/dashboard/nav-links.tsx`
+
 ```tsx
 import {
   UserGroupIcon,
   HomeIcon,
   DocumentDuplicateIcon,
-} from '@heroicons/react/24/outline';
-import Link from 'next/link';
+} from "@heroicons/react/24/outline";
+import Link from "next/link";
 
 // ...
 
@@ -75,16 +76,17 @@ export default function NavLinks() {
 由於 `usePathname()` 是一個 React hook，您需要將 `nav-links.tsx` 轉變為一個**客戶端元件 (Client Component)**。在檔案頂部添加 React 的 `"use client"` 指令，然後從 `next/navigation` 匯入 `usePathname()`：
 
 `/app/ui/dashboard/nav-links.tsx`
+
 ```tsx
-'use client';
+"use client";
 
 import {
   UserGroupIcon,
   HomeIcon,
   DocumentDuplicateIcon,
-} from '@heroicons/react/24/outline';
-import Link from 'next/link';
-import { usePathname } from 'next/navigation';
+} from "@heroicons/react/24/outline";
+import Link from "next/link";
+import { usePathname } from "next/navigation";
 
 // ...
 ```
@@ -92,6 +94,7 @@ import { usePathname } from 'next/navigation';
 接下來，在您的 `<NavLinks />` 元件內部，將路徑賦值給一個名為 `pathname` 的變數：
 
 `/app/ui/dashboard/nav-links.tsx`
+
 ```tsx
 export default function NavLinks() {
   const pathname = usePathname();
@@ -104,17 +107,18 @@ export default function NavLinks() {
 以下是 `nav-links.tsx` 的最終程式碼：
 
 `/app/ui/dashboard/nav-links.tsx`
+
 ```tsx
-'use client';
+"use client";
 
 import {
   UserGroupIcon,
   HomeIcon,
   DocumentDuplicateIcon,
-} from '@heroicons/react/24/outline';
-import Link from 'next/link';
-import { usePathname } from 'next/navigation';
-import clsx from 'clsx';
+} from "@heroicons/react/24/outline";
+import Link from "next/link";
+import { usePathname } from "next/navigation";
+import clsx from "clsx";
 
 // ...
 
@@ -130,10 +134,10 @@ export default function NavLinks() {
             key={link.name}
             href={link.href}
             className={clsx(
-              'flex h-[48px] grow items-center justify-center gap-2 rounded-md bg-gray-50 p-3 text-sm font-medium hover:bg-sky-100 hover:text-blue-600 md:flex-none md:justify-start md:p-2 md:px-3',
+              "flex h-[48px] grow items-center justify-center gap-2 rounded-md bg-gray-50 p-3 text-sm font-medium hover:bg-sky-100 hover:text-blue-600 md:flex-none md:justify-start md:p-2 md:px-3",
               {
-                'bg-sky-100 text-blue-600': pathname === link.href,
-              },
+                "bg-sky-100 text-blue-600": pathname === link.href,
+              }
             )}
           >
             <LinkIcon className="w-6" />
@@ -147,4 +151,7 @@ export default function NavLinks() {
 ```
 
 儲存並檢查您的 localhost。您現在應該能看到活動連結以藍色高亮顯示。
+
+```
+
 ```
