--- a/docs/第6章：設定您的資料庫.md
+++ b/docs/第6章：設定您的資料庫.md
@@ -6,10 +6,10 @@
 
 以下是我們將涵蓋的主題：
 
--   將您的專案推送到 GitHub。
--   設定 Vercel 帳戶並連結您的 GitHub 儲存庫，以便即時預覽和部署。
--   建立您的專案並將其連結到一個 Postgres 資料庫。
--   使用初始資料填充資料庫 (Seed the database)。
+- 將您的專案推送到 GitHub。
+- 設定 Vercel 帳戶並連結您的 GitHub 儲存庫，以便即時預覽和部署。
+- 建立您的專案並將其連結到一個 Postgres 資料庫。
+- 使用初始資料填充資料庫 (Seed the database)。
 
 ## 建立 GitHub 儲存庫
 
@@ -19,8 +19,8 @@
 
 **值得注意的是：**
 
--   您也可以使用其他 Git 提供商，例如 GitLab 或 Bitbucket。
--   如果您不熟悉 GitHub，我們推薦使用 [GitHub Desktop App](https://desktop.github.com/) 來簡化開發工作流程。
+- 您也可以使用其他 Git 提供商，例如 GitLab 或 Bitbucket。
+- 如果您不熟悉 GitHub，我們推薦使用 [GitHub Desktop App](https://desktop.github.com/) 來簡化開發工作流程。
 
 ## 建立 Vercel 帳戶
 
@@ -40,7 +40,7 @@
 
 ![已部署的專案](https://nextjs.org/_next/image?url=https%3A%2F%2Fh8DxKfmAPhn8O0p3.public.blob.vercel-storage.com%2Flearn%2Fdark%2Fdeployed-project.png&w=1920&q=75)
 
-*專案概覽畫面，顯示專案名稱、網域和部署狀態。*
+_專案概覽畫面，顯示專案名稱、網域和部署狀態。_
 
 透過連接您的 GitHub 儲存庫，每當您將變更推送到您的主要分支 (main branch) 時，Vercel 將自動重新部署您的應用程式，無需任何額外配置。當您開啟拉取請求 (pull requests) 時，您還會獲得即時的預覽 URL，這讓您能夠及早發現部署錯誤，並與團隊成員分享專案預覽以獲取回饋。
 
@@ -72,9 +72,9 @@
 
 **疑難排解：**
 
--   請確保在將資料庫密鑰複製到您的 `.env` 檔案之前顯示它。
--   該腳本使用 `bcrypt` 來雜湊使用者的密碼。如果 `bcrypt` 與您的環境不相容，您可以將腳本更新為使用 `bcryptjs`。
--   如果您在填充資料庫時遇到任何問題，並且想要再次運行腳本，您可以透過在資料庫查詢介面中運行 `DROP TABLE tablename` 來刪除任何現有的表格。有關更多詳細資訊，請參閱下面的執行查詢部分。但請務必小心，此指令將刪除表格及其所有資料。在您的範例應用程式中使用此操作是可以的，因為您正在處理佔位符資料，但您不應該在生產應用程式中運行此指令。
+- 請確保在將資料庫密鑰複製到您的 `.env` 檔案之前顯示它。
+- 該腳本使用 `bcrypt` 來雜湊使用者的密碼。如果 `bcrypt` 與您的環境不相容，您可以將腳本更新為使用 `bcryptjs`。
+- 如果您在填充資料庫時遇到任何問題，並且想要再次運行腳本，您可以透過在資料庫查詢介面中運行 `DROP TABLE tablename` 來刪除任何現有的表格。有關更多詳細資訊，請參閱下面的執行查詢部分。但請務必小心，此指令將刪除表格及其所有資料。在您的範例應用程式中使用此操作是可以的，因為您正在處理佔位符資料，但您不應該在生產應用程式中運行此指令。
 
 ## 執行查詢
 
@@ -88,4 +88,7 @@ WHERE invoices.amount = 666;
 ```
 
 取消該檔案的註解，移除 `Response.json()` 區塊，然後在瀏覽器中導航到 `localhost:3000/query`。您應該會看到返回的發票金額和客戶名稱。
+
+```
+
 ```
